# transcribe

./: .env.example  .gitignore  AGENTS.md  README.md  com.kian.transcribe.plist  com.transcribe.plist.template  pyproject.toml  run_transcribe.sh  transcribe.py
scripts/: install_launchd.sh
src/: install_launchd.sh  run_transcribe.sh  transcribe.py
